FIX Correct the stretched images

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -446,8 +446,10 @@ a h2:hover, .footer-nav ul li a:hover {
 }
 
 .blog-image {
-    width: 100%;
     max-height: 170px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .tweet-text {
